--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ webmaster_verifications:
 # Navigation
 ############################################################
 
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://sixftover.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 nowurl: "http://sixftover.com"
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "jekyll_blog/" # the subpath of your site, e.g. /blog
 permalink: /blog/:year/:month/:title
 paginate: 9
 paginate_path: "/blog/page:num/"
