--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,15 +1,15 @@
-Adventure
+Adventure:
   name: adventure
   url: topic/adventure
-Tips
+Tips:
   name: tips
   url: topic/tips
-Food
+Food:
   name: food
   url: topic/food
-Life
+Life:
   name: life
   url: topic/life
-Photography
+Photography:
   name: photography
   url: topic/photography
