--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ webmaster_verifications:
 ############################################################
 
 url: "https://sixftover.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-nowurl: "http://sixftover.com"
-baseurl: "jekyll_blog/" # the subpath of your site, e.g. /blog
+nowurl: "https://sixftover.github.io/"
+baseurl: "" # the subpath of your site, e.g. /blog
 
 permalink: /blog/:year/:month/:title
 paginate: 9
