--- a/_data/topics.1.yml
+++ b/_data/topics.1.yml
@@ -1,15 +1,15 @@
-topics: adventure
+adventure:
   name: adventure
   url: topic/adventure
-topics: tips
+tips:
   name: tips
   url: topic/tips
-ftopics: ood
+food:
   name: food
   url: topic/food
-topics: life
+life:
   name: life
   url: topic/life
-topics: photography
+photography:
   name: photography
   url: topic/photography
