--- a/_config.yml
+++ b/_config.yml
@@ -85,18 +85,18 @@ defaults:
       path: ""
       type: "continents"
     values:
-      layout: "locations-continent"
-      pageID: "articlePage"
+      layout: "locations-continent"=
       thumbnail: "/img/thumb.jpg"
       thumbnailRetina: "/img/thumb@2x.jpg"
+      description: "Each continent brings its very own sense of style and series of surprises. We hope to bring fellow travelers along with our stories, as our feet bring us from place to place."
   - scope:
       path: ""
       type: "countries"
     values:
       layout: "locations-country"
-      pageID: "articlePage"
       thumbnail: "/img/thumb.jpg"
       thumbnailRetina: "/img/thumb@2x.jpg"
+      description: "Each country brings its very own sense of style and series of surprises. We hope to bring fellow travelers along with our stories, as our feet bring us from place to place."
 
 ############################################################
 # Build settings
