--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,16 +1,11 @@
 ---
-Adventure:
-  name: adventure
+- name: adventure
   url: topic/adventure
-Tips:
-  name: tips
+- name: tips
   url: topic/tips
-Food:
-  name: food
+- name: food
   url: topic/food
-Life:
-  name: life
+- name: life
   url: topic/life
-Photography:
-  name: photography2
+- name: photography2
   url: topic/photography
