--- a/_data/locations.yml
+++ b/_data/locations.yml
@@ -1,5 +1,5 @@
-- Asia:
-    code: asia
+
+-   code: asia
     countries:
     - code: CN
       name: China
@@ -15,8 +15,8 @@
       url: "/locations/asia/hong-kong"
     name: Asia
     url: "/locations/asia"
-- Europe:
-    code: europe
+
+-   code: europe
     countries:
     - code: GB
       name: United Kingdom
@@ -36,8 +36,8 @@
       url: "/locations/europe/iceland"
     name: Europe
     url: "/locations/europe"
-- North America:
-    code: north-america
+
+-   code: north-america
     countries:
     - code: US
       name: United States
