--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,16 +1,16 @@
 ---
 - Adventure: 
   name: adventure
-  url: topic/adventure
+  url: /topic/adventure
 - Tips: 
   name: tips
-  url: topic/tips
+  url: /topic/tips
 - Food: 
   name: food
-  url: topic/food
+  url: /topic/food
 - Life: 
   name: life
-  url: topic/life
+  url: /topic/life
 - photography: 
   name: photography
-  url: topic/photography
+  url: /topic/photography
